# GeoToolkit

./: .gitignore  CMakeLists.txt  LICENSE  README.md
app/: CMakeLists.txt
cmake/: GeoBoxDependencies.cmake
cmake/common/: add_lib.cmake  add_test.cmake  get_sub_dirs.cmake  igl_copy_dll.cmake
src/: CMakeLists.txt  Config.hpp
src/color/: Color.hpp  ColorMap.hpp  ColorMapData.hpp
src/detail/: BasicDataType.hpp  CMakeLists.txt  Geometry.hpp  Handler.hpp  Math.hpp
src/utils/: Common.hpp
src/viewer/: CMakeLists.txt  MeshViewer.hpp
src/viewer/test/: MeshViewerTest.cpp
src/voronoi/: CGALVoronoi.cpp  CGALVoronoi.hpp  CMakeLists.txt  GeoVoronoi.cpp  GeoVoronoi.hpp  Voronoi.hpp
